--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.fievx.paoloproject"
+        applicationId "com.fievx.poletproject"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
